--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "arwes": "^1.0.0-alpha.5",
+    "arwes": "1.0.0-alpha.5",
+    "cross-env": "^7.0.3",
+    "nasa-fe": "file:",
+    "nasa-project": "file:..",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -14,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH=../server/public react-scripts build",
+    "build": "cross-env BUILD_PATH=../server/public react-scripts build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
