--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest --detectOpenHandles",
     "test-watch": "jest --watch",
-    "watch": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "watch": "cross-env PORT=5000 nodemon src/server.js",
+    "start": "cross-env PORT=5000 node src/server.js",
     "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
@@ -17,19 +17,24 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "axios": "^1.5.1",
+    "axios": "^1.7.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "csv-parse": "^5.5.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.6.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
-    "pm2": "^5.3.0"
+    "nasa-project": "file:..",
+    "nasa-project-api": "file:",
+    "pm2": "^5.4.2"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "jest-dashboard": "^0.3.1",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   },
   "overrides": {
     "semver": "~7.5.4"
