--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,11 +1,9 @@
 name: NASA Project CI
-
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
-
 jobs:
   build:
     env:
@@ -13,41 +11,20 @@ jobs:
       MONGO_URL: mongodb://localhost/nasa
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [14.x, 16.x, 20.x]
+        node-version: [20.x]
         mongodb-version: ["4.4"]
-    runs-on: ${{ matrix.os }}
-
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - name: Use Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Setup MongoDB ${{ matrix.mongodb-version }}
+      - name: Use MongoDB from GitHub actions
         uses: supercharge/mongodb-github-action@1.6.0
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Install cross-env
-        run: npm install cross-env
-
-      - name: Build Client (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          cross-env BUILD_PATH=../server/public react-scripts build
-        working-directory: ./client
-
-      - name: Build Client (Linux and macOS)
-        if: runner.os != 'Windows'
-        run: |
-          npm run build --prefix client
-
-      - name: Run Tests
-        run: npm test
+      - run: npm install
+      - run: npm install cross-env
+      - run: npm run build --prefix client
+      - run: npm test
