--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -25,6 +25,6 @@ jobs:
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
       - run: npm install
-      - run: npm install run
+      - run: npm install cross-env
       - run: npm run build --prefix client
       - run: npm test
