--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,30 +1,43 @@
 name: NASA Project CI
+
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
+
 jobs:
   build:
-    env:
-      CI: true
-      MONGO_URL: mongodb://localhost/nasa
+    runs-on: ubuntu-latest # Use ubuntu-latest for better compatibility
     strategy:
       matrix:
         node-version: [20.x]
         mongodb-version: ["4.4"]
-    runs-on: windows-latest
+    env:
+      CI: true
+      MONGO_URL: mongodb://localhost/nasa
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js version ${{ matrix.node-version }}
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Use MongoDB from GitHub actions
+
+      - name: Setup MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
-      - run: npm install
-      - run: npm install cross-env
-      - run: npm run build --prefix client
-      - run: npm test
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install cross-env
+        run: npm install cross-env
+
+      - name: Build client
+        run: npm run build --prefix client
+
+      - name: Run tests
+        run: npm test
