--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Build client
         run: npm run build --prefix client
+        shell: bash
 
       - name: Run tests
         run: npm test
