--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -39,9 +39,9 @@ jobs:
       - name: Set execute permissions for cross-env
         run: chmod +x ./node_modules/.bin/cross-env
 
-      - name: Build client
-        run: npm run build --prefix client
-        shell: bash
+      # - name: Build client
+      #   run: npm run build --prefix client
+      #   shell: bash
 
       - name: Run tests
         run: npm test
