--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -48,5 +48,7 @@ jobs:
       - name: Deploy (Optional)
         run: npm run deploy --prefix client
 
+      - name: Install Jest
+        run: npm install jest --global
       - name: Run tests
         run: npm test
