--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -50,5 +50,8 @@ jobs:
 
       - name: Install Jest
         run: npm install jest --global
+
       - name: Run tests
-        run: npm test
+        run: |
+          npm test --prefix server && npm test --prefix client
+          npm test --prefix server && jest --detectOpenHandles
