--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,49 +1,29 @@
 name: NASA Project CI
-
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
-
 jobs:
   build:
-    runs-on: ubuntu-latest # Use ubuntu-latest for better compatibility
-    strategy:
-      matrix:
-        node-version: [20.x]
-        mongodb-version: ["4.4"]
     env:
       CI: true
       MONGO_URL: mongodb://localhost/nasa
+    strategy:
+      matrix:
+        node-version: ["lts/*"]
+        mongodb-version: ["4.4"]
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - name: Use Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Setup MongoDB
+      - name: Use MongoDB from GitHub actions
         uses: supercharge/mongodb-github-action@1.6.0
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Install cross-env
-        run: npm install cross-env
-
-      - name: Install dependencies
-        run: npm install --prefix client
-
-      - name: Set execute permissions for cross-env
-        run: chmod +x ./client/node_modules/.bin/cross-env
-
-      - name: Build client
-        run: npm run build --prefix client
-
-      - name: Install Jest
-        run: npm install jest --global
+      - run: npm install
+      - run: npm run build --prefix client
+      - run: npm test
