--- a/.github/workflow/node.yml
+++ b/.github/workflow/node.yml
@@ -25,5 +25,7 @@ jobs:
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
       - run: npm install
+      - name: Set execute permissions for cross-env
+        run: chmod +x ./node_modules/.bin/cross-env
       - run: npm run build --prefix client
       - run: npm test
