--- a/.github/workflow/node.yml
+++ b/.github/workflow/node.yml
@@ -25,9 +25,5 @@ jobs:
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
       - run: npm install
-      - run: npm install -g cross-env
-      - run: cross-env BUILD_PATH=../server/public npm run build --prefix client
-      - name: Set execute permissions for cross-env
-        run: chmod +x ./node_modules/.bin/cross-env
-      # - run: npm run build --prefix client
+      - run: npm run build --prefix client
       - run: npm test
